--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
+  font-family: "Red Hat Text";
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  /* font size */
+  --font-size: 14px;
+  /* color */
+  --white: hsl(0, 0%, 100%);
+  --darkblue: hsl(236, 21%, 26%);
+  --verydarkblue: hsl(235, 16%, 14%);
+  --mostlyblack: hsl(234, 17%, 12%);
+  /* primary */
+  --grayishBlue: hsl(237, 18%, 59%);
+  --softRed: hsl(345, 95%, 68%);
 }
